--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "accounting": "^0.4.1",
     "bourbon": "^4.2.7",
     "browser-sync": "^2.17.5",
     "gulp": "^3.9.1",
